--- a/_tabs/events.html
+++ b/_tabs/events.html
@@ -14,6 +14,7 @@ custom_css:
 </div>
 
 <div class="center" id="unlock-controls">
+    <p>Please enter the password that you receivied with the website link to unlock event details and timings. Contact Varsha/Oli if you can't find the password.</p>
     <div>
     <label for="passwd"><b>password:</b></label>
     <input type="text" id="passwd" name="">
