events changes apparently

--- a/_tabs/events.html
+++ b/_tabs/events.html
@@ -14,13 +14,19 @@ custom_css:
 </div>
 
 <div class="center" id="unlock-controls">
+    <p>
+        The exact timing of the events is only available for guests. 
+        If you have forgotten your password <br/>
+        (or are not yet a guest but would like to be one), please contact Oliver or Varsha!
+    </p>
+
     <div>
     <label for="passwd"><b>password:</b></label>
     <input type="text" id="passwd" name="">
     </div>
     <div>
     <input type=checkbox id="cookie-permit" selected></input>
-    <label for="cookie-permit">save password in a 
+    <label for="cookie-permit" style="max-width:100px;overflow:visible;">save unlock in a 
             <a href="https://en.wikipedia.org/wiki/HTTP_cookie">cookie</a>
             that expires after the wedding?</label>
     </div>
