--- a/_tabs/events.html
+++ b/_tabs/events.html
@@ -62,11 +62,11 @@ custom_css:
       <span class="icon">🗓️</span> &nbsp;&nbsp;Add to Calendar
     </button>
     <div id="dropdown-menu-{{i}}" class="dropdown-menu">
-      <button onclick="addToGoogleCalendar('{{ evt.title }}', '{{ evt.location }}', '{{ evt.start }}', '{{ evt.end }}', '{{ evt.desc }}')">Google
+      <button onclick="addToGoogleCalendar(`{{ evt.title }}`, `{{ evt.location }}`, `{{ evt.start }}`, `{{ evt.end }}`, `{{ evt.desc }}`)">Google
       </button>
-      <button onclick="addToAppleCalendar('{{ evt.title }}', '{{ evt.location }}', '{{ evt.start }}', '{{ evt.end }}', '{{ evt.desc }}')">Apple
+      <button onclick="addToAppleCalendar(`{{ evt.title }}`, `{{ evt.location }}`, `{{ evt.start }}`, `{{ evt.end }}`, `{{ evt.desc }}`)">Apple
       </button>
-      <button onclick="addToOutlookCalendar('{{ evt.title }}', '{{ evt.location }}', '{{ evt.start }}', '{{ evt.end }}', '{{ evt.desc }}')">Outlook
+      <button onclick="addToOutlookCalendar(`{{ evt.title }}`, `{{ evt.location }}`, `{{ evt.start }}`, `{{ evt.end }}`, `{{ evt.desc }}`)">Outlook
       </button>
     </div>
   </div>
