fixed typos and such

--- a/_tabs/events.html
+++ b/_tabs/events.html
@@ -39,7 +39,7 @@ custom_css:
 </div>
 
 <div class=block data-access-level=0>
-(Feel free to where anything you'd like for all of the events. The attire listed below is just a suggestion in case you are looking for inspiration.)
+(Feel free to wear anything you'd like for all of the events. The attire listed below is just a suggestion in case you are looking for inspiration.)
 </div>
 
 {% assign i = 0 %}
