--- a/_tabs/events.html
+++ b/_tabs/events.html
@@ -37,7 +37,7 @@ custom_js:
             
             <div class="evt-content">
             <div class="evt-summary">
-                evt.content
+                {{ evt.content }}
             </div>
             {% if evt.rituals %}
             <div class="evt-rituals-toggle">
